--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "compression": "^1.5.0",
     "event-stream": "^3.3.1",
     "gulp": "^3.9.0",
+    "gulp-buster": "^1.1.0",
     "gulp-rev": "^5.0.1",
     "gulp-sourcemaps": "^1.5.2",
     "gulp-uglify": "^1.2.0",
